# lockit

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  STM32L432KCUX_FLASH.ld
hw/: DESIGN.md
hw/lockit/: lockit.kicad_pro  lockit.kicad_sch  mcu.kicad_sch  sym-lib-table
hw/lockit/symbols/NUCLEO-L432KC/: MODULE_NUCLEO-L432KC.kicad_mod  NUCLEO-L432KC.kicad_sym
inc/: FreeRTOSConfig.h  assert.h  log.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h
src/: assert.c  main.c  stm32l4xx_it.c
